--- a/magazine.html
+++ b/magazine.html
@@ -26,7 +26,7 @@
     <div class="header w">
         <div class="nav">
             <ul>
-                <li><a href="indetx.html">首页</a></li>
+                <li><a href="index.html">首页</a></li>
                 <li><a href="">音乐</a></li>
                 <li><a href="">杂志</a></li>
                 <li><a href="">现代艺术</a></li>
