--- a/magazine.html
+++ b/magazine.html
@@ -33,15 +33,15 @@
             </ul>
         </div>
         <div>
-            <input type="text">
+            <input type="text" placeholder="请输入">
         </div>
     </div>
     <div class="box w">
-        <div class="box-hd"></div>
+        
         <div class="box-bd">
             <div>
                 <div class="mask"></div>
-                <a href="https://renleia.github.io/3/POPEYE%202021.1.pdf" download=""><img src="images/POPEYE 2021.jpg"
+                <a href="https://renleia.github.io/3/POPEYE%202021.1.pdf" download=""><img src="images/POPEYE 2021.1.jpg"
                         alt="">
                 </a>
             </div>
@@ -51,6 +51,67 @@
                         src="images/POPEYE 2021.2.jpg" alt="">
                 </a>
             </div>
+            <div>
+                <div class="mask"></div>
+                <a href="https://renleia.github.io/3/POPEYE%202021.2.pdf" download=""><img
+                        src="images/POPEYE 2021.3.jpg" alt="">
+                </a>
+            </div>
+            <div>
+                <div class="mask"></div>
+                <a href="https://renleia.github.io/3/POPEYE%202021.2.pdf" download=""><img
+                        src="images/POPEYE 2021.4.jpg" alt="">
+                </a>
+            </div>
+            <div>
+                <div class="mask"></div>
+                <a href="https://renleia.github.io/3/POPEYE%202021.2.pdf" download=""><img
+                        src="images/POPEYE 2021.5.jpg" alt="">
+                </a>
+            </div>
+            <div>
+                <div class="mask"></div>
+                <a href="https://renleia.github.io/3/POPEYE%202021.2.pdf" download=""><img
+                        src="images/POPEYE 2021.6.jpg" alt="">
+                </a>
+            </div>
+            <div>
+                <div class="mask"></div>
+                <a href="https://renleia.github.io/3/POPEYE%202021.2.pdf" download=""><img
+                        src="images/POPEYE 2021.7.jpg" alt="">
+                </a>
+            </div>
+            <div>
+                <div class="mask"></div>
+                <a href="https://renleia.github.io/3/POPEYE%202021.2.pdf" download=""><img
+                        src="images/POPEYE 2021.8.jpg" alt="">
+                </a>
+            </div>
+            <div>
+                <div class="mask"></div>
+                <a href="https://renleia.github.io/3/POPEYE%202021.2.pdf" download=""><img
+                        src="images/POPEYE 2021.9.jpg" alt="">
+                </a>
+            </div>
+            <div>
+                <div class="mask"></div>
+                <a href="https://renleia.github.io/3/POPEYE%202021.2.pdf" download=""><img
+                        src="images/POPEYE 2021.10.jpg" alt="">
+                </a>
+            </div>
+            <div>
+                <div class="mask"></div>
+                <a href="https://renleia.github.io/3/POPEYE%202021.2.pdf" download=""><img
+                        src="images/POPEYE 2021.11.jpg" alt="">
+                </a>
+            </div>
+            <div>
+                <div class="mask"></div>
+                <a href="https://renleia.github.io/3/POPEYE%202021.2.pdf" download=""><img
+                        src="images/POPEYE 2021.12.jpg" alt="">
+                </a>
+            </div>
+
         </div>
     </div>
 </body>
